# Nexus-Framework

./: LICENSE  README.md  agent_roles_and_protocols.md  agents.roles.json  agents_and_protocols.md  architecture.md  external_tool_integration.md  github_integration.md  github_integration_and_cicd.md  manus-multi-agent-system.md  multi_domain_engineering.md  open_source_integration_map.md  orchestration.workflow.yaml  orchestration_and_fallback.md  pyproject.toml  research_notes.md  system_validation.md
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  index.md  open_source_integration_map.md  strategic_system_summary.md  system_limitations_and_opportunities.md
docs/architecture/: agent_layers.md  memory_system.md  modular_multi_agent_architecture.md  overview.md  technical_blueprint.md
docs/core/: index.md
docs/core/agents/: index.md
docs/developer_intelligence_pack/: 00_executive_summary.md  01_developer_onboarding_guide.md  02_codebase_overview.md  04_collaboration_protocols.md  06_local_development_setup.md  08_gap_analysis.md
docs/developer_intelligence_pack/templates/: README.md  directory_structure.md  package.json  pyproject.toml
docs/developer_intelligence_pack/templates/config/: agents.yaml  memory.yaml  orchestration.yaml  system.yaml
docs/development/: ci_cd.md  contribution.md  style_guide.md
docs/development/v2.6/: coordination_and_integration_logic.md  github_account_management.md  manus_account_and_agent_role_assignments.md  manus_knowledge_and_github_guide.md  multi_phase_development_roadmap.md  nexus_v2_6_development_plan_summary.md  project_directory_structure.md  testing_evaluation_and_security_strategy.md  toolchain_and_environment_selection.md
docs/development/v2.6/cortex_weave/: actionability_validation.md  detailed_development_plan.md  enhanced_development_plan.md  optimized_manus_knowledge_base.md  project_name_selection.md  supporting_elements.md
docs/development/v2.6/cortex_weave/guides_and_knowledge/: github_organization_guide.md  implementation_guide.md  manus_account_setup_guide.md
docs/development/v2.6/cortex_weave/manus_knowledge_base_optimized/Manus-AI/: agent_reasoning_system_design_core_principles.md  llm_fine_tuning_strategies.md  llm_prompt_engineering_core_patterns.md  multi_agent_collaboration_patterns.md  vector_database_optimization_core_practices.md
docs/development/v2.6/cortex_weave/manus_knowledge_base_optimized/Manus-Architect/: architectural_decision_records_format.md  architectural_principles_core.md  cloud_architecture_patterns.md  component_interface_patterns_core.md
docs/development/v2.6/manus_knowledge_base/Manus-AI/: agent_reasoning_system_design.md  llm_prompt_engineering_patterns.md  vector_database_optimization.md
docs/development/v2.6/manus_knowledge_base/Manus-Architect/: architectural_decision_records.md  architectural_principles.md  component_interface_patterns.md
docs/development/v2.6/manus_knowledge_base/Manus-Backend/: api_design_best_practices.md  asynchronous_processing_patterns.md  database_design_optimization.md
docs/development/v2.6/manus_knowledge_base/Manus-DevOps/: cicd_pipeline_design.md  container_orchestration_best_practices.md  infrastructure_as_code_best_practices.md
docs/development/v2.6/manus_knowledge_base/Manus-Frontend/: nextjs_performance_optimization.md  react_component_patterns.md  ui_ux_design_principles.md
docs/development/v2.6/manus_knowledge_base/Manus-PM/: multi_agent_project_management.md  project_coordination_framework.md
docs/development/v2.6/manus_knowledge_base/Manus-QA/: quality_metrics_and_kpis.md  test_automation_strategy.md
docs/development/v2.6/manus_knowledge_base/Manus-Security/: application_security_architecture.md  security_testing_methodology.md
docs/documentation_upgrade/: agent_specialization_framework.md  documentation_audit.md  documentation_hierarchy.md  human_in_the_loop_coordination.md  knowledge_management_pipelines.md  prioritized_documentation_upgrade_list.md  resilience_and_failure_recovery_architecture.md  security_model_and_sandboxing.md  testing_framework_for_agent_systems.md
docs/governance/: decision_records.md  release_process.md
docs/integrations/: github_integration.md  open_source.md
docs/operations/deployment/: index.md
docs/operations/resource_management/: index.md
docs/reference/: configuration.md
docs/strategic_review/: blind_spots_analysis.md  prioritized_upgrade_roadmap.md
src/core/: README.md
src/core/agents/: base_agent.py
src/core/memory/: memory_manager.py
src/core/orchestration/: orchestrator.py
src/core/planning/: strategic_planner.py
src/core/tools/: tool_registry.py
v1.0/: core_principles_synthesis.md
v1.1/: external_tool_integration.md
validation/: validation_report.md
(+21 files in other folders)
